--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
 	width: 81%;
 }
 
-#appName{
+#appName, #pingName{
 	font-family: 'SF Pro Display Bold';
 	font-style: normal;
 	font-weight: bold;
@@ -29,6 +29,10 @@
 	line-height: 25px;
 	letter-spacing: 0.01em;
 	color: #011B33;
+}
+
+#pingName{
+	padding: 1em;
 }
 
 #mainMenuText{
@@ -55,6 +59,35 @@
 .active{
 	animation: glow .5s linear;
 }
+
+#sectionBodyHeader{
+	height: 70px;
+}
+
+#adminBtnBody{
+	height: 40px;
+	width: 130px;
+	border-radius: 10px;
+	border: 1px solid var(--pageGrey);
+	margin-left: 30px;
+}
+
+#adminText{
+	font-family: 'Open Sans';
+	padding-right: 10px!important;
+}
+
+#funaabLogo{
+	/*padding-left: 1.3em;*/
+	font-size: 14px;
+}
+
+#adminTextArrow{
+	padding-left: 5px;
+	padding-top: 2px;
+}
+
+
 
 @keyframes glow{
 	from{
