--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@
 	border-radius: 10px;
 	border: 1px solid var(--pageGrey);
 	margin-left: 30px;
+	cursor: pointer;
 }
 
 #adminText{
@@ -85,6 +86,20 @@
 #adminTextArrow{
 	padding-left: 5px;
 	padding-top: 2px;
+}
+
+#sectionBodyContainer{
+	height: calc(100vh - 70px);
+	width: 100%;
+}
+
+.body{
+	width: 100%;
+	height: 100%;
+}
+
+#studentsSection{
+	display: none;
 }
 
 
