--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 	--pageBlue: #09A5DB;
 	--pageBlack: #011B33;
 	--pageGrey: #B0B0B0;
+	--pageTextBlack: #333333;
+	--pageTextGrey: #828282;
 }
 
 #pageBody{
@@ -22,7 +24,7 @@
 }
 
 #appName, #pingName{
-	font-family: 'SF Pro Display Bold';
+	font-family: 'SF Pro Display Bold', sans-serif;
 	font-style: normal;
 	font-weight: bold;
 	font-size: 1.4em;
@@ -49,7 +51,7 @@
 	padding-left: .8em;
 	font-family: 'Open Sans';
 	font-size: 1em;
-	font-family: 'SF Pro Display Medium';
+	font-family: 'SF Pro Display Medium', sans-serif;
 }
 
 .sideMenuText.active > span {
@@ -74,7 +76,7 @@
 }
 
 #adminText{
-	font-family: 'Open Sans';
+	font-family: 'Open Sans', sans-serif;
 	padding-right: 10px!important;
 }
 
@@ -96,10 +98,62 @@
 .body{
 	width: 100%;
 	height: 100%;
+	background: #f5f6fa;
+	margin: 0px!important;
+	overflow-y: scroll;
+}
+
+.body::-webkit-scrollbar {
+  width: 7px;
+  height: .3px;
+}
+.body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.body::-webkit-scrollbar-thumb {
+	background-color: grey;
+	width: 2px;
+	height: 2px;
+	border-radius: 5px;
+	cursor: pointer;
 }
 
 #studentsSection{
 	display: none;
+}
+
+#statsSection{
+	width: 100%;
+	height: 240px;
+}
+
+#statsBody{
+	width: 92%;
+	height: 165px;
+}
+#statsBodyName{
+	height: 45%;
+	font-family: 'SF Pro Display Medium', sans-serif;
+	font-size: 1.2em;
+	padding: 25px;
+	color: var(---pageTextBlack);
+}
+
+.pingsStatsCount{
+	font-size: 30px;
+	font-family: 'SF Pro Display Bold';
+	color: var(---pageTextBlack);
+	padding-top: .4em;
+}
+
+#statsBodyStats{
+	height: 55%;
+}
+
+.pingsStatsCountText{
+	font-family: 'Open Sans', sans-serif;
+	color: var(--pageTextGrey);
 }
 
 
