--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,24 @@
 
 #studentSectionsBody{
 	width: 100%;
-	min-height: 300px;
+	height: 450px;
+	overflow-y: scroll;
+}
+
+#studentSectionsBody::-webkit-scrollbar {
+  width: 3px;
+  height: .3px;
+}
+#studentSectionsBody::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+#studentSectionsBody::-webkit-scrollbar-thumb {
+	background-color: var(--pageTextGrey);
+	width: 2px;
+	height: 2px;
+	border-radius: 20px;
+	cursor: pointer;
 }
 
 
