--- a/css/style.css
+++ b/css/style.css
@@ -890,6 +890,31 @@ header{
 	display: none;
 }
 
+#loginLoaderBackground{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	right: 0px;
+	left: 0px;
+	bottom: 0px;
+	background: #ebf2f5;
+	opacity: 0.7;
+	display: none;
+}
+
+#loginLoader{
+	position: absolute;
+	top: 0px;
+	right: 0px;
+	left: 0px;
+	bottom: 0px;
+	width: 100%;
+	height: 100%;
+	background: none;
+	display: none;
+}
+
 
 
 
