--- a/css/style.css
+++ b/css/style.css
@@ -886,13 +886,26 @@ header{
 .input-field input[type=text]:focus + label {
     color: var(--pageBlue) !important;
 }
+.input-field input[type=password]:focus + label {
+    color: var(--pageBlue) !important;
+}
+
 /* label underline focus color */
 .input-field input[type=text]:focus {
     border-bottom: 1px solid #d6e3eb !important;
     box-shadow: 0 1px 0 0 #d6e3eb !important;
 }
+.input-field input[type=password]:focus {
+    border-bottom: 1px solid #d6e3eb !important;
+    box-shadow: 0 1px 0 0 #d6e3eb !important;
+}
 
 .input-field input[type=text] {
+    color: #023664 !important;
+    font-size: 20px;
+    font-family: 'SF Pro Display Medium', sans-serif;
+}
+.input-field input[type=password] {
     color: #023664 !important;
     font-size: 20px;
     font-family: 'SF Pro Display Medium', sans-serif;
@@ -928,6 +941,13 @@ header{
 	height: 100%;
 	background: none;
 	display: none;
+}
+
+#passwordViewIcon{
+	position: absolute;
+	right: 40px;
+	color: var(--pageBlue);
+	cursor: pointer;
 }
 
 
