--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,7 @@
 	border-radius: 5px;
 	color: white;
 	font-size: 14px;
+	cursor: pointer;
 }
 
 #latestPingMessage{
@@ -780,6 +781,139 @@
 	border-radius: 100px;
 	object-fit: cover;
 }
+
+#startChatBtn{
+	width: 110px;
+	height: 40px;
+	border-radius: 5px;
+	border: 1px solid #09A5DB;
+	margin-right: 1em;
+	color: var(--pageBlue);
+	cursor: pointer;
+}
+
+#startChatBtn:hover{
+	background: #e5ebf0;
+}
+
+#chatBodyContainer{
+	width: 500px;
+	height: 515px;
+	position: absolute;
+	right: 2em;
+	bottom: 0px;
+	border-radius: 10px 10px 0px 0px;
+	background: white;
+}
+
+#chatBodyHead{
+	height: 70px;
+	width: 100%;
+	border-bottom: 1px solid #d6e3eb;
+}
+
+#chatUserName{
+	font-family: 'SF Pro Display Medium', sans-serif;
+	font-size: 20px;
+	display: flex;
+	align-items: flex-end;
+}
+
+#chatUserClinic{
+	font-family: 'SF Pro Display Light', sans-serif;
+	font-size: 16px;
+	display: flex;
+	align-items: flex-start;
+}
+
+
+#chatBox{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+}
+
+#chatBox > div{
+	width: 45px;
+	height: 45px;
+	background: #e6f6fb;
+	border-radius: 5px;
+	cursor: pointer; 
+}
+
+#chatBody{
+	height: 385px;
+	width: 100%;
+	border-bottom: 1px solid #d6e3eb;
+	overflow-y: scroll;
+}
+
+.receivedMessage{
+	width: 380px;
+	min-height: 50px;
+	margin-top: 20px;
+}
+
+#chatBody::-webkit-scrollbar {
+  width: 5px;
+  height: .3px;
+}
+
+#chatBody::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+#chatBody::-webkit-scrollbar-thumb {
+	background-color: var(--pageTextGrey);
+	width: 2px;
+	height: 2px;
+	border-radius: 20px;
+	cursor: pointer;
+}
+
+.fluid{
+	min-height: 50px !important;
+}
+
+.chatMessageBody{
+	width: 100%;
+	min-height: 200px;
+	background: #F2F2F2;
+	border-radius: 20px;
+	padding: 1em;
+	font-family: Open Sans, sans-serif;
+}
+
+.sentMessage{
+	margin-top: 20px;
+	width: 320px;
+	float: right;
+}
+
+.sentMessageBody{
+	background: var(--pageBlue);
+	border-radius: 20px;
+	padding: 1em;
+	color: white;
+	font-family: Open Sans, sans-serif;
+}
+
+.chatReplyBody{
+	height: 60px;
+}
+
+#chatReplyText{
+	width: 100%;
+	height: 100%;
+	border: 0px;
+	outline: 0px;
+	padding: 1em;
+}
+
+
+
+
+
 
 
 
