--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,22 @@
 	--pageTextGrey: #828282;
 }
 
+body::-webkit-scrollbar {
+  width: 0px;
+  height: .3px;
+}
+body::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+	background-color: var(--pageTextGrey);
+	width: 2px;
+	height: 2px;
+	border-radius: 20px;
+	cursor: pointer;
+}
+
 #pageBody{
 	width: 100%;
 	height: 100vh;
@@ -120,11 +136,11 @@
 }
 
 #studentsSection{
-	display: none;
+	/*display: none;*/
 }
 
 #pingsSection{
-	/*display: none;*/
+	display: none;
 }
 
 #statsSection{
@@ -260,17 +276,28 @@
 	padding-top: 2px;
 }
 
-#pingDetail{
+.pingDetail{
 	width: 100%;
 	height: 95px;
 	padding-top: 15px;
 	padding-bottom: 5px;
 }
 
-#pingDetail:hover{
+.pingDetail:hover{
 	background: #F5F6FA;
 	cursor: pointer;
 }
+.activePingIndicator.active{
+	width: 15px !important;
+	height: 15px !important;
+	position: relative;
+	bottom: 4em;
+	right: 1em;
+}
+.activePingIndicator.passive{
+	display: none;
+}
+
 
 #pingDetailImageBody{
 	padding-top: .6em!important;
@@ -285,7 +312,7 @@
 	margin-left: 2em;
 }
 
-#pingDetailTextBodyOne{
+.pingDetailTextBodyOne{
 	height: 30%;
 }
 
@@ -704,6 +731,52 @@
 	animation: glow .5s linear;
 }
 
+.pingHistoryColumn{
+	cursor: pointer;
+}
+
+.pingHistoryFullMessage{
+	display: none;
+	position: absolute;
+	width: 400px;
+	min-height: 80px;
+	max-height: 180px;
+	background: white;
+	margin-top: 3em;
+	margin-left: 5em;
+	border-radius: 5px;
+}
+.pingHistoryFullMessageHeader{
+	height: 40px;
+	padding: .8em;
+	font-family: 'SF Pro Display Medium', sans-serif;
+	font-weight: 500;
+	font-size: 1.2em;
+	color: var(--pageBlack);
+}
+.pingHistoryFullMessageText{
+	min-height: 40px;
+	max-height: 140px;
+	padding: 1em;
+	overflow-y: scroll;
+}
+
+.pingHistoryFullMessageText::-webkit-scrollbar {
+  width: 3px;
+  height: .3px;
+}
+.pingHistoryFullMessageText::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+.pingHistoryFullMessageText::-webkit-scrollbar-thumb {
+	background-color: var(--pageTextGrey);
+	width: 2px;
+	height: 2px;
+	border-radius: 20px;
+	cursor: pointer;
+}
+
 #studentDetailsPingHistoryHeader{
 	height: 70px;
 }
@@ -797,6 +870,7 @@
 }
 
 #chatBodyContainer{
+	display: none;
 	width: 500px;
 	height: 515px;
 	position: absolute;
@@ -846,12 +920,15 @@
 	width: 100%;
 	border-bottom: 1px solid #d6e3eb;
 	overflow-y: scroll;
+	padding-right: 10px;
+	padding-left: 5px;
 }
 
 .receivedMessage{
-	width: 380px;
-	min-height: 50px;
+	width: 400px;
+	/*min-height: 50px;*/
 	margin-top: 20px;
+	float: left;
 }
 
 #chatBody::-webkit-scrollbar {
@@ -877,7 +954,6 @@
 
 .chatMessageBody{
 	width: 100%;
-	min-height: 200px;
 	background: #F2F2F2;
 	border-radius: 20px;
 	padding: 1em;
@@ -886,6 +962,7 @@
 
 .sentMessage{
 	margin-top: 20px;
+	margin-right: 5px;
 	width: 320px;
 	float: right;
 }
@@ -910,7 +987,88 @@
 	padding: 1em;
 }
 
+#videoCallSection{
+	display: none;
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	right: 0px;
+	left: 0px;
+	bottom: 0px;
+	background: #F5F6FA;
+}
 
+#videoCallSectionHeader{
+	height: 65px;
+	width: 100%;
+	background: white;
+}
+
+#videoCallHeaderName{
+	font-family: 'SF Pro Display Medium', sans-serif;
+	font-size: 23px;
+	color: var(--pageTextBlack);
+	padding-top: 14px;
+	padding-left: 1.1em;
+}
+
+#videoCallHeaderTime{
+	font-family: 'SF Pro Display Medium', sans-serif;
+	font-size: 23px;
+	color: var(--pageBlue);
+}
+
+#videoCallBody{
+	height: calc(100vh - 85px);
+	width: 100%;
+}
+
+#videoCallViewSection{
+	height: 450px;
+	width: calc(100% - 80px);
+	margin-right: 40px;
+	margin-left: 40px;
+	background: #edeef2;
+}
+
+#callersImage{
+	width: 350px;
+	height: 100%;
+	object-fit: cover;
+}
+
+#doctorsImage{
+	width: 150px;
+	height: 150px;
+	float: right;
+	margin-right: 1em;
+}
+
+#videoCallButtonsBody{
+	width: 100%;
+	height: 90px;
+}
+
+#videoCallButtonsBody > div{
+	margin-right: 1em;
+	margin-left: 1em;
+	cursor: pointer;
+}
+
+.videoCallButtons{
+	display: flex !important;
+	justify-content: center !important;
+	align-items: center !important;
+	height: 60px;
+	width: 60px;
+	border-radius: 100px;
+	background: var(--pageBlue);
+}
+
+.videoCallButtons.cancel{
+	background: #EB5757;
+}
 
 
 
